Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -236,7 +236,8 @@
    "outputs": [],
    "source": [
     "web_address = 'vandelay.com' # 'www.vandelay.com'\n",
-    "web_address = \"www.\" + webaddres"
+    "web_address = \"www.\" + webaddress\n",
+    "web_address"
    ]
   },
   {
