--- a/index.ipynb
+++ b/index.ipynb
@@ -246,7 +246,7 @@
    ],
    "source": [
     "web_address = 'vandelay.com' # 'www.vandelay.com'\n",
-    "web_address = ({})\n",
+    "web_address = (\"www.{}\".format)\n",
     "web_address"
    ]
   },
