--- a/index.ipynb
+++ b/index.ipynb
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -239,14 +239,14 @@
        "'www.vandelay.com'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "web_address = 'vandelay.com' # 'www.vandelay.com'\n",
-    "web_address = (\"www.{}\".format)\n",
+    "web_address = (\"www.{}\".format(web_address))\n",
     "web_address"
    ]
   },
