--- a/index.ipynb
+++ b/index.ipynb
@@ -295,6 +295,7 @@
    "outputs": [],
    "source": [
     "phone_num_two = \"7285553334\" # 7285553336\n",
+    "phone_num_two = int(phone_num_on) + 1\n",
     "phone_num_two"
    ]
   },
